package omu.domain;

public enum ProductType {
    DRINK,
    SNACK
}

