package omu.patterns.observer;

public enum CatalogEventType {
    PRODUCT_ADDED,
    PRODUCT_UPDATED,
    PRODUCT_UNAVAILABLE
}

